{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0cf4f7c9-7056-4c1f-bbb4-3f840aea49c9",
            "actions": [
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "f56816f2-f0d5-4978-b04d-f40de187c165",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drag",
                    "type": "Value",
                    "id": "cb9b8c8f-5136-4452-8db4-e3ac14a06430",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DoubleTap",
                    "type": "Button",
                    "id": "581d4750-a158-4cc4-a50a-19c54a5d8a6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstTouchPosition",
                    "type": "PassThrough",
                    "id": "a927465e-f27e-439f-80e3-7cfa2e6030ba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouchPosition",
                    "type": "PassThrough",
                    "id": "c50dca3f-54b4-469e-96b0-9d55cd304255",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "bb48dfd9-cb9b-433a-bff6-6e70d1f96c39",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "e8fa9844-ad00-4291-a65d-4f67778fe9c7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TwoTouchDrag",
                    "type": "PassThrough",
                    "id": "07c87bda-3c6a-4154-afa7-64b0952a1315",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouch",
                    "type": "Button",
                    "id": "f859c2db-b728-4091-96d7-d161f9e5aab4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "TouchDrag",
                    "id": "61345d6f-9b30-44a2-9582-39bc8cf5c2aa",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "a64e6fa7-d171-4441-b895-89d45bad35b0",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "cec4a665-ad65-4676-a9c5-6bb29f655215",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseDrag",
                    "id": "c66c1043-3735-4a32-acfe-5c65534ea3a5",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "11008622-b040-4551-b023-262a08f7fc8a",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "008f391d-48ff-4ccb-9304-e6534a83e915",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6e72f6a6-6efa-4587-8b23-a86a84aa70e4",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "DoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbfe6f37-d175-415f-bea3-2a347909705f",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "DoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b39600ff-01df-4be1-9e2a-2e99d92bad5f",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1619451-a416-4095-9241-d8461d9a6435",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ae4dde7-6bca-4d10-94bc-bcf62e8d9de2",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "FirstTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "014f01bd-0a81-4f06-87b9-a3da7651a818",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FirstTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d15fea78-a4c6-4f0b-a7c8-67f0503c8936",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "SecondTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ece51dba-e775-4c07-be8c-9d8d031eb720",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ca6dd9f-06ce-4944-bd95-dccb04e5607b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64259869-9357-4c76-91b4-56787e453224",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "SecondTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8584329d-a2c4-4a37-948e-2c55aa53d281",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TwoTouchDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed84f2d3-0a63-4a6d-86de-4a63fef4ab53",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TwoTouchDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d47281d5-e96a-48e6-8897-9f02ba5f3f56",
            "actions": [
                {
                    "name": "Navigate",
                    "type": "PassThrough",
                    "id": "d9898b17-570d-40bd-b3f4-03bdbd635540",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "4b14487e-f917-4e94-af04-ed15040d6256",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "dd5c5efd-688f-43ac-a030-ec3e400f8c20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "a8216d04-e265-4e3b-b41f-c619512a4873",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "5bdc75f5-61a0-4e6b-92f2-bf81a9740396",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "0fb0e431-15c9-47f0-b4a6-433bd6a6967a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "8d64e36f-9b5d-41c2-9c98-7b6f4e4ad21c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "fd01d03a-a1ef-4d6c-a5ea-99aacb358b1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TrackedDevicePosition",
                    "type": "PassThrough",
                    "id": "9e680f55-45e1-448d-a9f3-808e329139be",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TrackedDeviceOrientation",
                    "type": "PassThrough",
                    "id": "64bdf33f-050d-4f05-8da7-046efde257bc",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c52c8e0b-8179-41d3-b8a1-d149033bbe86",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1394cbc-336e-44ce-9ea8-6007ed6193f7",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5693e57a-238a-46ed-b5ae-e64e6e574302",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4faf7dc9-b979-4210-aa8c-e808e1ef89f5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d66d5ba-88d7-48e6-b1cd-198bbfef7ace",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47c2a644-3ebc-4dae-a106-589b7ca75b59",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38c99815-14ea-4617-8627-164d27641299",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24066f69-da47-44f3-a07e-0015fb02eb2e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c191405-5738-4d4b-a523-c6a301dbf754",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}